2007-02-20  Ludwig Reiter  <ludwig.reiter@intevation.de>

	Added new icons for magnify.

	* src/de/intevation/printlayout/resources/viewmag+.png,
	  src/de/intevation/printlayout/resources/viewmag-.png,
	  src/de/intevation/printlayout/resources/viewmag1.png:
		New icons.

	* src/de/intevation/printlayout/resources/Magnify11.gif,
	  src/de/intevation/printlayout/resources/Magnifyminus.gif,
	  src/de/intevation/printlayout/resources/Magnifyplus.gif:
		removed the old icons.

	* src/de/intevation/printlayout/LayoutFrame.java:
		adjusted.

2007-02-19  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	Added package informations and some short descriptions.

	* src/de/intevation/printlayout/package.html,
	  src/de/intevation/printlayout/batik/package.html,
	  src/de/intevation/printlayout/beans/package.html,
	  src/de/intevation/printlayout/tools/package.html,
	  src/de/intevation/printlayout/util/package.html:
		new: package informations for JavaDoc

	* src/de/intevation/printlayout/DocumentManager.java,
	  src/de/intevation/printlayout/I18N.java,
	  src/de/intevation/printlayout/InfoDialog.java,
	  src/de/intevation/printlayout/LayoutCanvas.java,
	  src/de/intevation/printlayout/LayoutExtension.java,
	  src/de/intevation/printlayout/LayoutFrame.java,
	  src/de/intevation/printlayout/PrintLayoutPlugin.java,
	  src/de/intevation/printlayout/batik/PatternExt.java,
	  src/de/intevation/printlayout/beans/ExtraData.java,
	  src/de/intevation/printlayout/beans/MapData.java,
	  src/de/intevation/printlayout/beans/ScaleBarUpdater.java,
	  src/de/intevation/printlayout/beans/ScaleUpdater.java:
		added some short descriptions

2007-02-19  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	Refactoring package structure to clarify the internal 
	structure of the plugin (part 2).
	Introduction of beans and batik packages

	* src/de/intevation/printlayout/DocumentManagerUtils.java:
		removed and reinserted as ...

	* src/de/intevation/printlayout/util/ElementUtils.java: