@@ -26,6 +26,8 @@ LayoutFrame.SaveSession=S&ave...
 LayoutFrame.LoadSession=&Load...
 LayoutFrame.View=&View
 LayoutFrame.ShowRuler=&Show Ruler
+LayoutFrame.OverrideDialog.Message=This file already exists. Override it?
+LayoutFrame.OverrideDialog.Title=override dialog
 PropertiesDialog.Ok=Ok
 PropertiesDialog.Cancel=Cancel
 BoxPropertiesDialog.Title=box properties
