@@ -31,6 +31,8 @@ LayoutFrame.SaveSession=S&peichern...
 LayoutFrame.LoadSession=&Laden...
 LayoutFrame.View=&Ansicht
 LayoutFrame.ShowRuler=&Lineal anzeigen
+LayoutFrame.OverrideDialog.Message=Diese Datei existiert bereits. Soll ich sie \u00fcberschreiben?
+LayoutFrame.OverrideDialog.Title=\u00dcberschreiben der Datei?
 PropertiesDialog.Ok=Ok
 PropertiesDialog.Cancel=Abbruch
 BoxPropertiesDialog.Title=Rechtecks-Eigenschaften
